--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waiting...</title>
   </head>
-  <body>
-    <iframe
-      width="2000"
-      height="2000"
-      src="https://www.youtube.com/embed/DLzxrzFCyOs?hl=en_US&version=3&rel=0&autoplay=1"
-      frameborder="1"
-      allowfullscreen
-    ></iframe>
-  </body>
+  <body></body>
+  <script>
+    document.addEventListener("DOMContentLoaded", async function () {
+      // Request on local API
+      async function getDepots() {
+        fetch("http://localhost:8080/api/depots", {
+          method: "GET",
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log(data);
+            return data;
+          });
+      }
+      const depots = await getDepots();
+    });
+  </script>
 </html>
