--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -46,9 +46,9 @@
           });
       }
       const depots = await getDepots();
-      const depot = depots.data[1];
-      await cloneDepot(depot.id);
-      const technologies = await getDepotTechnologies(depot.id);
+      const depot = depots["data"][0];
+      await cloneDepot(depot["id"]);
+      const technologies = await getDepotTechnologies(depot["id"]);
       console.log(technologies);
     });
   </script>
